examples/test/testpolicy11797.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11797
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key8: value24
      key13: value31
      key24: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value20
          key34: value27
          key13: value44
      podSelector:
        matchLabels:
          key13: value22
          key31: value18
